# BlindCard

./: .gitignore  CLAUDE.md  CLAUDE_RULES.md  CMakeLists.txt  README.md
.context-history/: 2026-03-06_combobox-au-ui-bug.md
.deliverables/: quick-start-guide-copy.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: BlindCardManager.cpp  BlindCardManager.h  BlindCardSessionRegistry.cpp  BlindCardSessionRegistry.h  LUFSMeter.cpp  LUFSMeter.h  Types.h  UpdateChecker.cpp  UpdateChecker.h
Source/Standalone/: StandaloneAudioEngine.cpp  StandaloneAudioEngine.h  StandalonePresetManager.cpp  StandalonePresetManager.h
Source/UI/: BlindCardEditor.cpp  BlindCardEditor.h  CardComponent.cpp  CardComponent.h  ColorUtils.h  DebugPanel.h  GlowAssets.h
Source/UI/Animation/: AnimatedValue.h
Source/UI/Components/: CardCountControl.cpp  CardCountControl.h  ChipButton.cpp  ChipButton.h  ChipStack.cpp  ChipStack.h  ControlPanel.cpp  ControlPanel.h  GuessDropdown.cpp  GuessDropdown.h  HeaderBar.cpp  HeaderBar.h  ModeSelector.cpp  ModeSelector.h  PokerCard.cpp  PokerCard.h  PokerTable.cpp  PokerTable.h  QuestionBanner.cpp  QuestionBanner.h  QuickStartGuide.cpp  QuickStartGuide.h  ResultsPanel.cpp  ResultsPanel.h  SettingsPanel.cpp  SettingsPanel.h  StarRating.cpp  StarRating.h  TransportBar.cpp  TransportBar.h
Source/UI/Localization/: LocalizationManager.cpp  LocalizationManager.h
Source/UI/Theme/: FontManager.h  ThemeColors.h  ThemeManager.cpp  ThemeManager.h
assets/: BlindCard.icns
assets/fonts/: LICENSE
docs/: 2026-04-27-notebook-design.md  CHANGELOG-2026-01-30.md  TROUBLESHOOTING.md  UI-REDESIGN-PROGRESS.md  USER_MANUAL.md
docs/plans/: 2025-01-21-standalone-audio-player-design.md  2026-01-19-blindcard-ui-redesign.md  2026-01-19-ui-redesign-implementation.md
installer/: windows-installer.iss
openspec/changes/blindcard-aax-protools-release/: design.md  proposal.md  tasks.md  validation-notes.md
openspec/changes/blindcard-aax-protools-release/specs/aax-build/: spec.md
openspec/changes/blindcard-aax-protools-release/specs/aax-packaging/: spec.md
packaging/: BlindCard.entitlements  distribution.xml  notarize.sh  sign-and-package.sh
packaging/Distribution/: distribution.xml
packaging/Scripts/: preinstall
packaging/resources/: conclusion.html  license.html  welcome.html
poker-moodboard/: color-system.md  design-spec.md
